--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     
     <meta name="theme-color" content="#001a2c">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="google-site-verification" content="JQfugRjqVzaqTnMRDwHUDqpq_n5gEmoRAyVtThu0Oto" />
 
     <title>MS STORE - Premium Lifestyle</title>
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;600;900&display=swap" rel="stylesheet">
